Kubernetes/Computing/Boinc/yamls/boinc-deploy.yaml
# boinc Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boinc
  namespace: boinc
  labels:
    app: boinc
    app.kubernetes.io/name: boinc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boinc
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: boinc
        app.kubernetes.io/name: boinc
    spec:
      volumes:
      - name: boinc-data
        persistentVolumeClaim:
          claimName: boinc-data-pvc
      containers:
        - image: lscr.io/linuxserver/boinc:latest
          name: boinc
          imagePullPolicy: Always
          resources:
            limits:
              nvidia.com/gpu: 1 # requesting 1 GPU
          ports:
           - containerPort: 8080
             name: http-8080
             protocol: TCP
          volumeMounts:
           - mountPath: /config
             name: boinc-data
---
apiVersion: v1
kind: Service
metadata:
  name: boinc
  labels:
    app: boinc
  namespace: boinc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: boinc
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-boinc-https-redirect
  namespace: boinc
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-boinc-security
  namespace: boinc
spec:
  headers:
#    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-boinc-websecure
  namespace: boinc 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`boinc.urbaman.it`)
      services:
        - name: boinc
          port: 8080
          serversTransport: traefik-boinc-transport
      middlewares:
        - name: traefik-boinc-security
  tls:
    secretName: boinc-urbaman
    options:
      name: traefik-boinc-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-boinc-web
  namespace: boinc
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`boinc.urbaman.it`)
      services:
        - name: boinc
          port: 8080
      middlewares:
        - name: traefik-boinc-https-redirect
